feat:  article favorites functionality
